# cookiecutter-python-script

./: cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  pyproject.toml
