[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
flake8 = ">=4.0.1"
isort = ">=5.10.0"
pytest = ">=6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
